feat: .env config

--- a/Front/.env.example
+++ b/Front/.env.example
@@ -1,2 +1,3 @@
 # AI Agent Backend URL
-VITE_AGENT_BASE_URL=http://5.129.212.83:52000
+VITE_PROFILE_AGENT_BASE_URL=https://31fd7d3f-2580-4179-b86a-3b5125118293-agent.ai-agent.inference.cloud.ru
+VITE_EXCHANGE_AGENT_BASE_URL=https://25855856-ed62-4327-8321-92831b4810bd-agent.ai-agent.inference.cloud.ru
